fix scrollbar for windows

--- a/src/components/scss/AgentModal.scss
+++ b/src/components/scss/AgentModal.scss
@@ -17,12 +17,13 @@
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
   overflow-y: hidden;
   align-items: center;
   justify-content: center;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
 }
 
 @media (max-width: 768px) {
@@ -41,6 +42,12 @@
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 0 10px 9px rgb(30 30 30);
+  overflow-x: hidden;
+  -ms-overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .modal-content-image {
@@ -92,10 +99,16 @@
   position: relative;
   margin: 8px;
   padding: 5px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -ms-overflow-x: hidden;
   border: 1px solid black;
   border-radius: 10px;
   flex-wrap: nowrap;
+
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
 }
 
 .abilities-header {
